# State-Projection-Agent-Loop

./: .env.example  .gitignore  README.md  projection_loop_design_spec.md  pyproject.toml
.github/workflows/: ci.yml
examples/: gui_app.py  llm_adapters.py  quickstart.py
examples/coding_agent/: run_live.py  tools.py
examples/customer_support/: run_live.py  tools.py
examples/customer_support/manuals/: aquapure_ap100.md  smartbrew_sb2.md
examples/game_master/: run_live.py  tools.py
src/state_projection_loop/: __init__.py  artifacts.py  capability.py  compaction.py  compression.py  config.py  discovery.py  embeddings.py  events.py  handles.py  hooks.py  ids.py  llm.py  logger.py  messages.py  policy.py  projection.py  registry.py  run.py  runtime.py  session.py  tokens.py  tooldef.py  working_state.py
src/state_projection_loop/adapters/: __init__.py  openai_compat.py
src/state_projection_loop/builtin/: __init__.py  meta.py  state.py
tests/: _util.py  conftest.py
tests/acceptance/: test_acceptance.py  test_p0_p1_acceptance.py
tests/integration/: test_deepseek_live.py  test_full_stack_live.py  test_gguf_embeddings.py
tests/scenarios/: test_coding_agent.py  test_customer_support.py  test_game_master.py
tests/unit/: test_artifacts.py  test_capability.py  test_compaction.py  test_compression.py  test_config_tokens.py  test_discovery.py  test_handles.py  test_policy.py  test_projection.py  test_registry.py  test_run.py  test_runtime.py  test_session.py  test_state_spawn.py  test_tooldef.py  test_working_state.py
